--- a/plutus-book/doc/03-UTxO.adoc
+++ b/plutus-book/doc/03-UTxO.adoc
@@ -8,13 +8,13 @@ inevitable that the reader must first acquire a solid understanding of how
 accounting is done on the Cardano platform.
 
 We traditionally think of money transfers as being between two bank accounts,
-or perhaps internet addresses in the case of digital currency. The Cardano platform,
-like a number of other cryptocurrency platforms such as Bitcoin, uses instead
+or internet addresses, in the case of digital currency. The Cardano platform,
+like a number of other cryptocurrency platforms, such as Bitcoin, uses
 an accounting approach known as UTxO-style.
 
 UTxO-style accounting documents the flow of money not from account to account,
 but rather from transaction to transaction. Each transaction has inputs
-(where the money being spent this transaction is coming from) and outputs
+(where the money being spent is coming from), and outputs
 (where this money is going). Note that the body of a transaction may also
 contain other data, as we will see later when we examine the extended
 UTxO model in the <<_extended_utxo_model>> Chapter.
@@ -39,8 +39,8 @@ Now, Bob has 10 Ada from previous unspent outputs. He spends them as follows:
 
 * all 10 Ada goes to the new transaction
 
-This new transaction we illustrate here has two inputs, 42 from Alice and 10
-from Bob. This transaction has two outputs, 2 Ada to Bob and 50 to Charlie.
+This new transaction we illustrate here has two inputs, 42 from Alice, and 10
+from Bob. This transaction has two outputs, 2 Ada to Bob, and 50 to Charlie.
 We also see that Charlie has 52 Ada from a previously unspent output, for
 a total of 102 Ada he can spend in future transactions. Bob is left with
 only one output of 2 Ada, and Alice, a total of 58 Ada in unspent outputs
@@ -53,13 +53,13 @@ participants. In this simplified version, the transactions illustrated are not
 paying fees, etc.
 Even in this somewhat simplified model, we see that an output must always be spent
 in full. That is, a record of an unspent output cannot be modified (this would
-be essentially account-based bookkeeping), only used entirely. In order to maintain
-the ledger bookkeeping integrity, we must have in our new transaction unspent outputs totaling
-the correct amount of all the unspent outputs that are being used up by it. In the
+be account-based bookkeeping), only used entirely. In order to maintain
+the ledger bookkeeping integrity, the new transaction must have all the unspent outputs (totaling
+the correct amount of all the unspent outputs) that are being used up by it. In the
 example above, our new transaction removes (i.e. uses as inputs) unspent outputs of value
 42 from Alice and 10 from Bob, for a total of 52 Ada. We must then have
 52 Ada of outputs from this transaction (2 to Bob and 50 to Charlie).
-Note here that Bob both had an unspent output used by this transaction and
+Note here that Bob had both an unspent output used by this transaction and
 an unspent output produced by this transaction. That is, he got, so to say,
 change (of 2 Ada) from this transaction. Since there is no true way to spend
 part of an output, this is how UTxO accounting deals with partial spending -
@@ -70,7 +70,7 @@ to distribute the flow of cash from several contributors to several recipients b
 having it flow into a common pot, i.e. the transaction, before being sent to
 the intended payees.
 This is, in a very general sense, the goal of smart contracts.
-Let us explore what is going on during a UTxO transaction processing event more formally.
+Let us explore what is going on during the processing of a UTxO transaction event more formally.
 For the basic transaction
 model we discuss here, refer to Figure <</images/UTxO.png>>.
 
@@ -91,7 +91,7 @@ The values in the UTxO finite map are pairs of a coin value and an
 address, whose type is by latexmath:[\mathsf{TxOut = Addr * Coin}].
 
 As for the structure of the transaction itself,
-let us examine the outputs first. The a single transaction may distribute
+let us examine the outputs first. The single transaction may distribute
 the money it is spending to several different addresses.
 The outputs (values of type latexmath:[\mathsf{TxOut}]) are stored in a transaction as the values in a finite map.
 The keys of the finite map are distinct index values within the context
@@ -104,9 +104,9 @@ global identifier.
 
 The inputs are also a list, however, the elements of this list contain neither
 a coin value to be spent, nor the address which the money is coming from.
-This is the main distinction between traditional and UTxO accounting:
+This is the main distinction between traditional accounting and UTxO accounting:
 the money being spent is only referred by the unspent outputs of
-previously processed transactions on the ledger currently on the blockchain.
+previously processed transactions on the ledger that reside currently on the blockchain.
 Each element of the inputs list is a pair of a transaction ID and an index.
 Which, as explained above, uniquely identifies the unspent output in the UTxO
 which is to be spent.
@@ -150,7 +150,7 @@ filters UTxO entries by the values.
 & \text{range restriction}
 \end{align*}
 
-We would like to use this notation to process a new transaction. That is,
+We would like to use this notation to process a new transaction. That is, to
 remove the spent outputs, and build the
 set of new outputs a transaction is adding to the UTxO (as we described above).
 We may compute the outputs as follows:
@@ -190,18 +190,17 @@ addresses.
 
 Now, in order to validate a transaction, there are a number of
 calculations performed involving the ADA in the transaction and the ADA
-in other accounts on the ledger to make sure ADA is neither created nor destroyed,
-so to say. This is known as the generalized accounting property. It is the enforcement
-of this property,
-and not an inherent invariant of the UTxO transaction processing scheme, that
+in other accounts on the ledger to make sure ADA is neither created nor destroyed. This is known as 
+the generalized accounting property. It is the enforcement
+of this property, and not an inherent invariant of the UTxO transaction processing scheme, that
 ensures that no dishonest spending is allowed to occur. This is a crucial property
-for the Cardano ledger bookkeeping system, in particular because there is a
+of the Cardano ledger bookkeeping system, in particular because there is a
 set amount of Ada in existence, which can never change.
 
 Note also that a transaction includes a host of other data, such as
 witnesses, certificates, and scripts along with their hashes.
 Here we have not gone into the details of the specific types and calculations
-used in the Cardano ledger implementation, but now the reader should have a
+used in the Cardano ledger implementation, but you should now have a
 sufficient understanding of the structure of a transaction and how it is
 processed to be able to understand what goes on behind the
 scenes when Plutus code is used to generate a transaction.
