--- a/plutus-book/doc/01-preface.adoc
+++ b/plutus-book/doc/01-preface.adoc
@@ -1,7 +1,8 @@
+[#02-preface]
 = Preface
 
 This book teaches you how to write reliable smart contracts with Plutus, the
-new general purpose language developed by IOHK for smart contracts on the blockchain. 
+new general purpose language developed by IOHK for smart contracts on the blockchain.
 
 This book aims to educate beginner Haskell developers in the fundamentals of
 Plutus. It is the first book written about Plutus and uses real life samples to
@@ -18,7 +19,7 @@ and understand the basics of Haskell programming prior to reading this book.
 We begin with a glossary, and advise you to refer to it frequently for
 clarity when trying to make sense of a new concept. A more thorough explanation
 of each term will be given as it is introduced in the main text. This book references
-examples regularly to enhance learning and illustrate the code in practice. 
+examples regularly to enhance learning and illustrate the code in practice.
 
 Come and explore the world of Plutus and learn our new language through
 real life scenarios and sample code snippets!
